updates to admin rights on product records

--- a/app/views/psd-revised-flow/inc_products_pg_content.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content.html
@@ -47,7 +47,7 @@
                 <a href="/psd-revised-flow/businesses.html" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
             </li>
             <li>
-                <a href="/psd-revised-flow/images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(7)</span></a>
+                <a href="/psd-revised-flow/images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(3)</span></a>
             </li>
             <li>
                 <a href="/psd-revised-flow/supporting-information.html" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(9)</span></a>
@@ -92,7 +92,7 @@
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Product record owner</dt>
                             <dd class="govuk-summary-list__value">
-                                You are the product owner
+                                Your team are the product owners
                             </dd>
                             <!--dd class="govuk-summary-list__actions">
                                 <a href="#" class="govuk-link govuk-link--no-visited-state">
