--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -261,6 +261,10 @@
 
             </li>
         </ul>
+
+        if a team closes down any open cases then the products they own become inactive.
+
+        Restricted cases - only hide the case info not the product info (users can still link to the product)
         
         <p class="govuk-body"><sup>*</sup> <span class="todo">To do: </span>Devise how (if) the new case name feature will work. (Functionality on the cases pages - and search - displays will need updating to fallback to "names" created before this feature).</p>
 
