--- a/app/views/psd-revised-flow/is-this-the-product.html
+++ b/app/views/psd-revised-flow/is-this-the-product.html
@@ -30,36 +30,44 @@
                 <section class="row opss-panels" id="correct-hint">
                     <div class="govuk-grid-column-one-half-from-desktop opss-panels__single">
 
-                        <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Toshiba Electric Scooter</h2>
+                        <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Asda window and glass cleaner</h2>
 
                         <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-6">
                             <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    <abbr title="Product Safety Database">PSD</abbr> <span title="reference">ref</span>   
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    psd-122 
+                                </dd>
+                            </div>                            
+                            <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">Brand </dt>
-                                <dd class="govuk-summary-list__value">Toshiba</dd>
+                                <dd class="govuk-summary-list__value">Asda</dd>
                             </div>
                             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">Name </dt>
-                                <dd class="govuk-summary-list__value">Electric Scooter</dd>
+                                <dd class="govuk-summary-list__value">Window and glass cleaner</dd>
                             </div>
                             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">Model </dt>
-                                <dd class="govuk-summary-list__value">12000 mvvt</dd>
+                                <dd class="govuk-summary-list__value"></dd>
                             </div>
                             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">Category </dt>
-                                <dd class="govuk-summary-list__value">Electrical</dd>
+                                <dd class="govuk-summary-list__value">Temporibus doloremque</dd>
                             </div>
                             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">Subcategory </dt>
-                                <dd class="govuk-summary-list__value">Electric scooter</dd>
+                                <dd class="govuk-summary-list__value">Lorem ipsum dolor elit</dd>
                             </div>
                             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">Model <span class="opss-numero" title="Number">№</span> </dt>
-                                <dd class="govuk-summary-list__value">V-L10</dd>
+                                <dd class="govuk-summary-list__value"></dd>
                             </div>
                             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">Barcode </dt>
-                                <dd id="barNumber" class="govuk-summary-list__value"></dd>
+                                <dd id="barNumber" class="govuk-summary-list__value">664996-7676323</dd>
                             </div>
                             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">Identifier(s) </dt>
@@ -73,7 +81,7 @@
                                     Product description
                                 </span>
                             </summary>
-                            <div class="govuk-details__text">Black and red scooter with seat. 10-inch air tyres.</div>
+                            <div class="govuk-details__text">Pump action 300ml bottle with clear liquid used for spraying onto domestic windows and glass for cleaning.</div>
                         </details>
 
                         <details class="govuk-details govuk-!-margin-bottom-3" data-module="govuk-details">
@@ -82,7 +90,7 @@
                                     Product image
                                 </span>
                             </summary>
-                            <div class="govuk-details__text"><img src="../public/images/products/image_10.png" class="opss-details-img" alt="Product image"></div>
+                            <div class="govuk-details__text"><img src="../public/images/asda-window-cleaner.png" class="opss-details-img" alt="Asda window cleaner"></div>
                         </details>
 
                         <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
