--- a/app/views/psd-revised-flow/remove-product.html
+++ b/app/views/psd-revised-flow/remove-product.html
@@ -29,7 +29,7 @@
                 </legend>
 
                 <div class="govuk-hint" id="remove-hint">
-                    The product record <abbr>psd</abbr>-304 will be removed from the case.
+                    The product record 'Asda dishwashing liquid' (<abbr>psd</abbr>-304) will be removed from the case.
                 </div>
     
                 <div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1">
