--- a/app/views/responsible-person-address/responsible-person-address_updates.html
+++ b/app/views/responsible-person-address/responsible-person-address_updates.html
@@ -50,7 +50,7 @@
             
             <strong class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
-                You must update your cosmetic product labels with your new address. Any cosmetic products you have notified will be associated with the new address. You will not need to submit a new notification. 
+                You must update your cosmetic product labels with any change to the address. Any cosmetic products you have notified will be associated with the new address. You will not need to submit a new notification. 
             </strong>
         </div>
         <div class="govuk-warning-text govuk-!-margin-top-0 govuk-!-margin-bottom-6 opss-warning-text--s">
@@ -104,7 +104,7 @@
               The address of the legal entity named as the Responsible Person.
             </div>
     
-            <div class="govuk-form-group"><label class="govuk-label" for="address_line_1">Building and street <span class="govuk-visually-hidden">line 1 of 2</span></label><input aria-describedby="address-hint" class="govuk-input govuk-!-width-three-quarters" id="address_line_1" name="responsible_person[address_line_1]" type="text" value="100 Acacia Ave"></div>
+            <div class="govuk-form-group govuk-!-margin-bottom-5"><label class="govuk-label" for="address_line_1">Building and street <span class="govuk-visually-hidden">line 1 of 2</span></label><input aria-describedby="address-hint" class="govuk-input govuk-!-width-three-quarters" id="address_line_1" name="responsible_person[address_line_1]" type="text" value="100 Acacia Ave"></div>
     
             <div class="govuk-form-group"><label class="govuk-label" for="address_line_2"><span class="govuk-visually-hidden">Building and street line 2 of 2</span></label><input class="govuk-input govuk-!-width-three-quarters" id="address_line_2" name="responsible_person[address_line_2]" type="text" value=""></div>
     
