--- a/app/views/psd-revised-flow/add-a-product.html
+++ b/app/views/psd-revised-flow/add-a-product.html
@@ -41,7 +41,7 @@
                 </summary>
                 <div class="govuk-details__text">
                     <p class="govuk-body-s">
-                        Use the Products area to find a product and a product record reference number. <span class="govuk-!-margin-right-1">For example, <i><abbr>psd</abbr>-301</i>.</span> You can search for products within the <abbr>PSD</abbr> product records using the <a href="#" class="govuk-link govuk-link--no-visited-state" target="blank"><span class="opss-no-wrap">Products search page</span> (opens in new tab)</a>. Using an existing <abbr>PSD</abbr> product record avoids having to create a new one and highlights other cases investigating the same product.
+                        Use the Products area to find a product and a product record reference number. <span class="govuk-!-margin-right-1">For example, <i><abbr>psd</abbr>-301</i>.</span> You can search for products within the <abbr>PSD</abbr> product records using the <a href="#" class="govuk-link govuk-link--no-visited-state" target="blank"><span class="opss-no-wrap">Products search page</span> (opens in new tab)</a>. Using an existing <abbr>PSD</abbr> product record avoids the need to create a new one and highlights other cases investigating the same product.
                     </p>
                     <p class="govuk-body-s">
                         After checking that a product does not already exist within the <abbr>PSD</abbr> product records, you can add it to the database (using the links provided in the Products area pages).
