--- a/app/views/psd-revised-flow/inc_products_pg_content.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content.html
@@ -92,7 +92,7 @@
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Product record owner</dt>
                             <dd class="govuk-summary-list__value">
-                                Your team are the product owners
+                                Your team is the product record owner
                             </dd>
                             <!--dd class="govuk-summary-list__actions">
                                 <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -255,7 +255,7 @@
                     
                     <!-- only show this next line if the user is the product owner (or same team) -->
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To edit the details for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304 </span>product record page</a>
+                        To edit the details for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304</span> product record page</a>
                     </p>
               
                 </div>
@@ -266,7 +266,7 @@
                     <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images - they <strong>are not</strong> the case evidence images.</p>
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304 </span>product record page <span class="govuk-visually-hidden">to access its images</span></a>
+                        To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304</span> product record page <span class="govuk-visually-hidden">to access its images</span></a>
                     </p>
               
                 </div>
@@ -275,7 +275,7 @@
                     <h4 class="govuk-heading-m">Product attachments</h4>
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304 </span>product record page <span class="govuk-visually-hidden">to access its attachments</span></a>
+                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304</span> product record page <span class="govuk-visually-hidden">to access its attachments</span></a>
                     </p>                  
               
                 </div>
