psd flow pages updates

--- a/app/views/psd-revised-flow/case-opss-landing__enquiry.html
+++ b/app/views/psd-revised-flow/case-opss-landing__enquiry.html
@@ -1,4 +1,4 @@
-{% extends "layout-01.html" %}
+{% extends "layout-psd-menu_cases.html" %}
 
 {% block pageTitle %}
     Case landing page - OPSS - Enquiry
