--- a/app/views/psd-revised-flow/contact-prod-owner.html
+++ b/app/views/psd-revised-flow/contact-prod-owner.html
@@ -1,4 +1,4 @@
-{% extends "layout-routes-02.html" %}
+{% extends "layout-psd-menu_cases.html" %}
 
 {% block pageTitle %}
     Email the product record owner
@@ -22,7 +22,7 @@
 
             <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="2000">
                 <div class="govuk-form-group govuk-!-margin-bottom-5">
-                    <span class="govuk-caption-l">Product record: psd-304 </span>
+                    <!--span class="govuk-caption-l">Product record: psd-304 </span-->
                     <h1 class="govuk-label-wrapper">
                         <label class="govuk-label govuk-label--l govuk-!-margin-bottom-2" for="description">
                             Email the product record owner
@@ -30,7 +30,7 @@
                     </h1>
 
                     <div id="description-hint" class="govuk-hint">
-                        The email message will automatically include the product name, the <abbr>PSD</abbr> reference number and a hyperlink to the product record page.
+                        The email message will automatically include the product name, the <abbr>psd</abbr>-[.] reference number and a hyperlink to the product record page.
                     </div>
 
                     <details class="govuk-details govuk-!-margin-bottom-7 opss-details--sm" data-module="govuk-details">
