--- a/app/views/psd-revised-flow/supporting-information.html
+++ b/app/views/psd-revised-flow/supporting-information.html
@@ -1,4 +1,4 @@
-{% extends "layout-01.html" %}
+{% extends "layout-psd-menu_cases.html" %}
 
 {% block pageTitle %}
     Supporting information
@@ -10,7 +10,7 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters">
-        <span class="govuk-caption-l">Allegation: 2101-0008 </span>
+        <span class="govuk-caption-l">Case allegation 2101-0008 </span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
             Supporting information
         </h1>
