--- a/app/views/psd-revised-flow/add-a-product.html
+++ b/app/views/psd-revised-flow/add-a-product.html
@@ -1,4 +1,4 @@
-{% extends "layout-routes-02.html" %}
+{% extends "layout-psd-menu_cases.html" %}
 
 {% block pageTitle %}
     Add a product to the case
@@ -18,7 +18,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">  
 
-            <span class="govuk-caption-l">Add a product to case 2101-0008 </span>
+            <!--span class="govuk-caption-l">Add a product to case 2101-0008 </span-->
             <h1 class="govuk-label-wrapper">
                 <label class="govuk-label govuk-label--l" for="add-product">
                     Enter a <abbr>PSD</abbr> product record reference number
@@ -41,10 +41,10 @@
                 </summary>
                 <div class="govuk-details__text">
                     <p class="govuk-body-s">
-                        Use the Products area to find a product and a product record reference number. <span class="govuk-!-margin-right-1">For example, <i><abbr>psd</abbr>-301</i>.</span> You can search for products within the <abbr>PSD</abbr> product records using the <a href="#" class="govuk-link govuk-link--no-visited-state" target="blank"><span class="opss-no-wrap">Products search page</span> (opens in new tab)</a>. Using an existing <abbr>PSD</abbr> product record avoids the need to create a new one and highlights other cases investigating the same product.
+                        Use the Products area to find a product and its product record reference number. <span class="govuk-!-margin-right-1">For example, <i><abbr>psd</abbr>-301</i>.</span> You can search for products within the <abbr>PSD</abbr> product records using the <a href="#" class="govuk-link govuk-link--no-visited-state" target="blank"><span class="opss-no-wrap">Products search page</span> (opens in new tab)</a>. Using an existing <abbr>PSD</abbr> product record to add to your case avoids the need to create a new one and highlights other cases investigating the same product.
                     </p>
                     <p class="govuk-body-s">
-                        After checking that a product does not already exist within the <abbr>PSD</abbr> product records, you can add it to the database (using the links provided in the Products area pages).
+                        After checking that a product does not already exist within the <abbr>PSD</abbr> product records, you can add a product to the database (using the links provided in the Products area pages).
                     </p>
                 </div>
             </details>
