--- a/app/views/psd-revised-flow/images.html
+++ b/app/views/psd-revised-flow/images.html
@@ -1,4 +1,4 @@
-{% extends "layout-routes-02.html" %}
+{% extends "layout-psd-menu_cases.html" %}
 
 {% block pageTitle %}
     Images
@@ -11,7 +11,7 @@
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-three-quarters">
-                <span class="govuk-caption-l">Allegation: 2101-0008 </span>
+                <span class="govuk-caption-l">Case allegation 2101-0008 </span>
                 <h1 class="govuk-heading-l">
                     Images
                 </h1>
