--- a/app/views/psd-revised-flow/inc_products_pg_content_multi.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_multi.html
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters">
-        <span class="govuk-caption-l">Allegation: 2101-0008 </span>
+        <span class="govuk-caption-l">Case allegation 2101-0008 </span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
             Products
         </h1>
