--- a/app/views/psd-revised-flow/risk-level.html
+++ b/app/views/psd-revised-flow/risk-level.html
@@ -1,4 +1,4 @@
-{% extends "layout-01.html" %}
+{% extends "layout-psd-menu_cases.html" %}
 
 {% block pageTitle %}
     Risk level
@@ -20,7 +20,7 @@
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-three-quarters">
-                <span class="govuk-caption-l">Allegation: 2101-0008 </span>
+                <span class="govuk-caption-l">Case allegation 2101-0008 </span>
                 <h1 class="govuk-heading-l">
                     Risk level
                 </h1>
