--- a/app/views/cosmetics-search-designs/search-page-01b-new-reset.html
+++ b/app/views/cosmetics-search-designs/search-page-01b-new-reset.html
@@ -430,8 +430,22 @@
 <script>
     /* hide first filter for non js - start */
     if(document.getElementById('by-date-range')){
-        if (!window.location.search) {// = no querystring
+        if (!window.location.search) {// = no querystring 
             document.getElementById('by-date-range').removeAttribute('checked');
+        }else{// = there is a querystring
+            var IDinputs = document.getElementById('conditional-date-block-2');
+            var myInputs = IDinputs.getElementsByTagName('input');
+            var anyVal = false;
+
+            for (i = 0; i < myInputs.length; ++i) {
+                if(myInputs[i].value != ''){//if an input has a value //alert(myInputs[i].value);
+                    anyVal = true;//set to true
+                    break; 
+                }
+            }                
+            if(anyVal == false){//date range inputs are empty, so remove checked radio (collapse date range)
+                document.getElementById('by-date-range').removeAttribute('checked');
+            }
         }
     }
     /* hide first filter for non js - end */
@@ -444,6 +458,7 @@
     var prodSelect = document.getElementById('notification_search_form_category');
 
     document.getElementById('opss-reset').addEventListener('click', function () {//click the filter's form reset link/button
+
         prodSelect.querySelectorAll('option').forEach(function(s){//all options
             s.removeAttribute('selected');
         });
