latest case flow work

--- a/app/views/psd-revised-flow/case-opss-landing__enquiry.html
+++ b/app/views/psd-revised-flow/case-opss-landing__enquiry.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters">
+    <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
         <span class="govuk-caption-l">Enquiry: 2101-0009 </span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
             Case
