--- a/app/views/psd-revised-flow/inc_left_nav_1b.html
+++ b/app/views/psd-revised-flow/inc_left_nav_1b.html
@@ -1,6 +1,15 @@
-        <ul class="govuk-list opss-left-nav">
+<ul class="govuk-list opss-left-nav">
+    <li>
+        <a href="#" class="govuk-link govuk-link--no-visited-state">My cases</a>
+    </li>
+    <li>
+        <a href="#" class="govuk-link govuk-link--no-visited-state">Team cases</a>
+
+        <ul class="govuk-list govuk-!-margin-top-4 govuk-!-margin-right-0 govuk-!-margin-bottom-2 govuk-!-margin-left-0">
             <li class="opss-left-nav__active">
-                <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Case <span class="govuk-!-font-weight-regular govuk-!-margin-left-1">2101-0008</span></a>
+                <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">
+                    Case <span class="govuk-!-font-weight-regular govuk-!-margin-left-1">2101-0008</span>
+                </a>
 
                 <ul class="govuk-list">
                     <li>
@@ -14,6 +23,7 @@
                         </a>
                     </li>                    
                 </ul>
+                
             </li>
             <li>
                 <a href="/psd-revised-flow/products.html" class="govuk-link govuk-link--no-visited-state">Products <span>(1)</span></a>
@@ -30,5 +40,10 @@
             <li>
                 <a href="/psd-revised-flow/activity.html" class="govuk-link govuk-link--no-visited-state">Activity</a>  
             </li>
-            
-        </ul>
+        </ul>             
+    </li>
+    <li>
+        <a href="#" class="govuk-link govuk-link--no-visited-state">All cases &ndash; Search</a>
+    </li>    
+</ul>
+        
