--- a/app/views/psd-revised-flow/inc_products_pg_content_multi.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_multi.html
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters">
-        <span class="govuk-caption-l">Case allegation 2101-0008 </span>
+    <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
+        <span class="govuk-caption-l">Allegation 2101-0008 </span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
             Products
         </h1>
@@ -276,7 +276,7 @@
                 </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-2">
                     <h4 class="govuk-heading-m">Related cases</h4>
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is linked to these cases.</p>
+                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is included in these cases.</p>
                 </div>
             </div>
 
@@ -505,7 +505,7 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-1">
                     <h4 class="govuk-heading-m">Related cases</h4>
                     
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is linked to these cases.</p>
+                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is included in these cases.</p>
               
                 </div>
             </div>
@@ -728,7 +728,7 @@
                 </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-3">
                     <h4 class="govuk-heading-m">Related cases</h4>
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is linked to these cases.</p>
+                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is included in these cases.</p>
                 </div>
             </div>
 
