--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -205,7 +205,7 @@
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <a class="todo" href="/psd-revised-flow/supporting-information.html" target="_blank">SUPPORTIVE INFORMATION page</a> 
+                    <a class="govuk-link govuk-link--no-visited-state todo" href="/psd-revised-flow/supporting-information.html" target="_blank">SUPPORTIVE INFORMATION page</a> 
                     
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
@@ -214,6 +214,39 @@
                     </ul>
                 </li>
             </ul>
+        </div> 
+        
+        <div class="govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8 opss-border-all">
+            <h2 class="govuk-heading-s">
+                Product page - the single product record pages in the Products area
+            </h2>
+
+            <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state todo" href="/psd-revised-flow/product-page.html" target="_blank">PRODUCT page</a> - owned by the user 
+                    
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>
+                            <a class="govuk-link govuk-link--no-visited-state todo" href="/psd-revised-flow/product-page-no-owner.html" target="_blank">Product page</a> - no owner
+                        </li>
+                        <li>
+                            <a class="govuk-link govuk-link--no-visited-state todo" href="/psd-revised-flow/product-page-no-owner.html" target="_blank">Product page</a> - owned by another team
+                        </li>
+                        <li>
+                            <a class="govuk-link govuk-link--no-visited-state todo" href="/psd-revised-flow/product-page-delete.html" target="_blank">Product page delete</a> - delete warning page
+                        </li>                                                
+                    </ul>
+                </li>
+            </ul>
+
+            <hr>    
+
+            <p class="govuk-body">Include the <i>"Delete this product record" </i> link <b>ONLY IF</b> the product record is <b>NOT</b> linked to any <b>OPEN</b> cases: and only then, 
+                if...</p>
+                <ul class="govuk-list govuk-list--bullet">
+                    <li>The user's team OWNS the product record, or</li>
+                    <li>The record is now un-owned and the user's team was the last team to have owned it</li>
+                </ul>
         </div>         
 
 
