--- a/app/views/psd-revised-flow/case-trading-stds-landing_warnings.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing_warnings.html
@@ -9,8 +9,8 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters">
-        <span class="govuk-caption-l">Case allegation 2101-0008 </span>
+    <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
+        <span class="govuk-caption-l">Allegation 2101-0008 </span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
             Case
         </h1>
@@ -47,7 +47,7 @@
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             <strong class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
-                There are no products, businesses, or risk assessments <br class="opss-br-desktop">included with this case.
+                There are no products, businesses, or risk assessments <br class="opss-br-desktop">included in this case.
             </strong>
         </div>
         <!-- if a trading stds user - end -->
