--- a/app/views/psd-revised-flow/images-empty.html
+++ b/app/views/psd-revised-flow/images-empty.html
@@ -10,8 +10,8 @@
     <div class="govuk-grid-column-full">
 
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-three-quarters">
-                <span class="govuk-caption-l">Case allegation 2101-0008 </span>
+            <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
+                <span class="govuk-caption-l">Allegation 2101-0008 </span>
                 <h1 class="govuk-heading-l">
                     Images
                 </h1>
