--- a/app/views/psd-revised-flow/product-page.html
+++ b/app/views/psd-revised-flow/product-page.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_products.html" %}
 
 {% block pageTitle %}
-    Product [.... ....]
+    Product psd-304
 {% endblock %}
 
 {% block beforeContent %}
@@ -16,31 +16,23 @@
 
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters">
-        <span class="govuk-caption-l">Product record psd-304</span>
+    <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
+        <!--span class="govuk-caption-l">Product record psd-304</span-->
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
-            Asda dishwashing liquid
+            Product <span class="govuk-!-font-weight-regular govuk-!-margin-left-2"><abbr>psd</abbr>-304</span>
         </h1>
 
-        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, sunt? Harum expedita vero ea incidunt iusto? Nisi, illo tempore nemo maxime  voluptas amet esse.</p>
+        <p class="govuk-body opss-secondary-text">Each product record in the Product Safety Database (<abbr>PSD</abbr>) has a <abbr>PSD</abbr> reference number. 
+            <!--Some products might be represented by more than one product record.--></p>
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
-            <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
-                xxxxx
+            <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                Add the product to a case
             </a>
         </div>
     </div>
-    <!--div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-2">
 
-        <ul class="govuk-list opss-float-right-desktop opss-text-align-right">
-            <li><a href="#" class="govuk-link govuk-link--no-visited-state opss-text-underline-offset">Close case</a></li>
-            <li><a href="#" class="govuk-link govuk-link--no-visited-state opss-text-underline-offset">Change Case owner</a></li>
-            <li><a href="#" class="govuk-link govuk-link--no-visited-state opss-text-underline-offset">Restrict this Case</a></li>
-            <li><a href="#" class="govuk-link govuk-link--no-visited-state opss-text-underline-offset">Change risk level</a></li>
-        </ul>
-
-    </div-->
 </div>              
 
 <div class="govuk-grid-row">
@@ -52,34 +44,45 @@
 
         <ul class="govuk-list opss-left-nav">
             <li>
-                <a href="/psd-revised-flow/case-trading-stds-landing.html" class="govuk-link govuk-link--no-visited-state">
-                    Case
+                <a href="#" class="govuk-link govuk-link--no-visited-state">
+                    My products
                 </a>
             </li>
+            <li>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Team products</a>
+            </li>
+            <li>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">All products &ndash; Search</a>
+            </li>
+        </ul>
+
+        <hr class="govuk-section-break govuk-section-break--visible govuk-!-margin-top-1 govuk-!-margin-bottom-6 govuk-!-margin-right-6">        
+
+        <ul class="govuk-list opss-left-nav">
             <li class="opss-left-nav__active">
-                <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Products <span>(1)</span></a>
+                <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">
+                    Product <span class="govuk-!-font-weight-regular govuk-!-margin-left-1"><abbr>psd</abbr>-304</span>
+                </a>
 
                 <ul class="govuk-list">
                     <li>
-                        <a href="#prod-1" class="govuk-link govuk-link--no-visited-state">
-                            Asda dishwashing liquid
+                        <a href="#images" class="govuk-link govuk-link--no-visited-state">
+                            Images
                         </a>
                     </li>
+                    <li>
+                        <a href="#attachments" class="govuk-link govuk-link--no-visited-state">
+                            Attachments
+                        </a>
+                    </li>  
+                    <li>
+                        <a href="#cases" class="govuk-link govuk-link--no-visited-state">
+                            <span class="govuk-visually-hidden">Related</span> Cases 
+                        </a>
+                    </li>                                        
                 </ul>
             </li>
-            <li>
-                <a href="/psd-revised-flow/businesses.html" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
-            </li>
-            <li>
-                <a href="/psd-revised-flow/images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(3)</span></a>
-            </li>
-            <li>
-                <a href="/psd-revised-flow/supporting-information.html" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(9)</span></a>
-            </li>
-            <li>
-                <a href="/psd-revised-flow/activity.html" class="govuk-link govuk-link--no-visited-state">Activity</a>  <!-- have add comment on this page -->
-            </li>
-        </ul>
+        </ul>        
     </nav>
             
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
@@ -87,10 +90,242 @@
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">The product record</h2>
 
         <section>
-            content
-        </section>
 
-        <!-- HR here followed by next section for next product - see, producgts-2-products.html -->
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-three-quarters">
+                    <h3 id="prod-1" class="govuk-heading-m">Asda dishwashing liquid</h3>
+                </div>
+                <div class="govuk-grid-column-one-quarter">
+                    <div class="opss-text-align-right opss-margin-bottom-1-desktop">
+                        <!-- ******** see the rules in the index page for if and when we include this link ******** -->
+                        <a href="/psd-revised-flow/delete-product-record.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                            Delete this record
+                        </a>                        
+                    </div>
+                </div>
+            </div>
+
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
+
+                    <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-4 opss-summary-list-mixed opss-summary-list-mixed--compact"> <!-- opss-summary-list-mixed--sm -->
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Last updated</dt>
+                            <dd class="govuk-summary-list__value">About 8 hours ago</dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Created</dt>
+                            <dd class="govuk-summary-list__value">13 December 2021</dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Product record owner</dt>
+                            <dd class="govuk-summary-list__value">
+                                Your team is the product record owner
+
+                                <!-- 
+                                    alt texts:
+                                    
+                                    1. Your team is the product record owner
+                                    2. No owner
+                                    3. <a href="contact-prod-owner" class="govuk-link govuk-link--no-visited-state">Cardiff trading standards service</a>
+
+
+                                    footers: No owner = "By editing this product record your team will become the owner of this product record"
+                                -->
+                            </dd>
+                            <!--dd class="govuk-summary-list__actions">
+                                <a href="#" class="govuk-link govuk-link--no-visited-state">
+                                    Contact<span class="govuk-visually-hidden"> the product's record owner</span>
+                                </a>
+                            </dd-->
+                        </div>
+                    </dl>  
+
+                </div>
+
+                Style this page into one page, like the case page - add Edit links
+
+                <div class="govuk-grid-column-one-third">
+
+                    <figure class="opss-margin-bottom-1-desktop">
+                        <img src="../public/images/dishwashing-liquid.jpg" class="opss-details-img opss-details-img--thumbnail opss-float-right-desktop" alt="Lorem ipsum etite">
+                        <figcaption class="govuk-visually-hidden">Image title here</figcaption>
+                        <!--figcaption class="opss-img-caption opss-text-align-right opss-float-right-desktop opss-margin-bottom-1-desktop">Lorem ipsum etite ett</figcaption-->
+                    </figure>
+
+                </div>
+            </div>
+            
+            <div class="govuk-tabs opss-tabs govuk-!-margin-bottom-2 opss-tabs--min-height-m" data-module="govuk-tabs">
+                <h3 class="govuk-tabs__title">
+                  Information related to this <abbr>PSD</abbr> product record
+                </h3>
+                
+                <ul class="govuk-tabs__list">
+                  <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
+                    <a class="govuk-tabs__tab" href="#product-tab-1">
+                      Details
+                    </a>
+                  </li>
+                  <li class="govuk-tabs__list-item">
+                    <a class="govuk-tabs__tab" href="#images-tab-1">
+                      Images <span class="govuk-!-font-size-16">(3)</span>
+                    </a>
+                  </li>
+                  <li class="govuk-tabs__list-item">
+                    <a class="govuk-tabs__tab" href="#attachments-tab-1">
+                      Attachments <span class="govuk-!-font-size-16">(2)</span>
+                    </a>
+                  </li>
+                  <li class="govuk-tabs__list-item">
+                    <a class="govuk-tabs__tab" href="#cases-tab-1">
+                      Cases <span class="govuk-!-font-size-16">(4)</span>
+                    </a>
+                  </li>
+                </ul>
+
+                <div class="govuk-tabs__panel govuk-!-padding-bottom-2" id="product-tab-1">
+                    <h4 class="govuk-heading-m">Product details</h4>
+
+                    <dl class="govuk-summary-list">
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                <abbr title="Product Safety Database">PSD</abbr> <span title="reference">ref</span>   
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                psd-304 
+                                <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                                    <span class="govuk-visually-hidden"> - </span>The <abbr>PSD</abbr> reference for this product record
+                                </span>
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Category
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Temporibus doloremque 
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Subcategory
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Lorem ipsum dolor elit
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Barcode
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                342984-9813766
+                            </dd>
+                        </div>                  
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Brand
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Asda
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Description
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Lorem ipsum quia possimus minus nam quo minima inventore impedit quaerat architecto veniam iusto, similique ratione voluptatibus molestias iste ipsa ea reiciendis fuga odio.
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Webpage
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                               <a href="https://www.dyson.co.uk/vacuum-cleaners/sticks/dyson-cyclone-v10-stick/dyson-cyclone-v10-absolute-pro" class="govuk-link govuk-link--no-visited-state" target="_blank">
+                                   <span class="govuk-!-font-size-16">www.dyson.co.uk/vacuum-cleaners/sticks/dyson-cyclone-v10-stick/dyson-cyclone-v10-absolute-pro</span>
+                                </a>
+                                <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">(Opens in a new tab)</span>
+                            </dd>
+                        </div>       
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Market date 
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                22 September 2021
+                                <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                                    <span class="govuk-visually-hidden"> - </span>Placed on the market
+                                </span>
+                            </dd>
+                        </div>                              
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Country of origin
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                China
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Product authenticity
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Product marking 
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Unknown
+                            </dd>
+                        </div> 
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key opss-border-none">
+                                Other product identifiers
+                            </dt>
+                            <dd class="govuk-summary-list__value opss-border-none">
+                                NO.DY807
+                            </dd>
+                        </div>
+                    </dl>
+                    
+              
+                </div>
+
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-1">
+                    <h4 class="govuk-heading-m">Product images</h4>
+                  
+                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images (they <strong>are not</strong> case evidence images).</p>
+              
+                </div>
+
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="attachments-tab-1">
+                    <h4 class="govuk-heading-m">Product attachments</h4>
+
+              
+              
+                </div>
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-1">
+                    <h4 class="govuk-heading-m">Related cases</h4>
+                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is included in these cases.</p>
+
+              
+                </div>
+            </div>
+
+            <!-- potential feature: pg to then enter the case ID. Only cases which the user owns are allowed -->
+            <!--div class="opss-text-align-right opss-margin-bottom-1-desktop">
+                <a href="/psd-revised-flow/remove-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset">
+                    Add this product record</a> to your case
+            </div-->  
+    
+        </section>
 
     </section>
 </div>
