--- a/app/views/psd-revised-flow/supporting-information.html
+++ b/app/views/psd-revised-flow/supporting-information.html
@@ -9,8 +9,8 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters">
-        <span class="govuk-caption-l">Case allegation 2101-0008 </span>
+    <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
+        <span class="govuk-caption-l">Allegation 2101-0008 </span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
             Supporting information
         </h1>
