updates to cases flow designs

--- a/app/views/psd-revised-flow/case-trading-stds-landing.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing.html
@@ -17,7 +17,7 @@
     <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
         <!--span class="govuk-caption-l">Allegation 2101-0008 </span-->
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
-            Case <span class="govuk-!-font-weight-regular govuk-!-margin-left-2">2101-0008</span>
+            Case <span class="govuk-!-font-weight-regular govuk-!-font-size-27 govuk-!-margin-left-2">2101-0008</span>
             <!--span class="govuk-heading-m govuk-!-font-weight-regular govuk-!-padding-left-1 opss-secondary-text">2101-0008</span-->
         </h1>
 
