--- a/app/views/psd-revised-flow/inc_left_nav_1b.html
+++ b/app/views/psd-revised-flow/inc_left_nav_1b.html
@@ -8,7 +8,7 @@
         <ul class="govuk-list govuk-!-margin-top-4 govuk-!-margin-right-0 govuk-!-margin-bottom-2 govuk-!-margin-left-0">
             <li class="opss-left-nav__active">
                 <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">
-                    Case <span class="govuk-!-font-weight-regular govuk-!-margin-left-1">2101-0008</span>
+                    Case <span class="govuk-!-font-weight-regular">&nbsp;2101-0008</span>
                 </a>
 
                 <ul class="govuk-list">
