--- a/app/views/psd-revised-flow/product-page.html
+++ b/app/views/psd-revised-flow/product-page.html
@@ -19,7 +19,7 @@
     <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
         <!--span class="govuk-caption-l">Product record psd-304</span-->
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
-            Product <span class="govuk-!-font-weight-regular govuk-!-margin-left-2"><abbr>psd</abbr>-304</span>
+            Product <span class="govuk-!-font-weight-regular govuk-!-font-size-27 govuk-!-margin-left-2"><abbr>psd</abbr>-304</span>
         </h1>
 
         <p class="govuk-body opss-secondary-text">Each product record in the Product Safety Database (<abbr>PSD</abbr>) has a <abbr>PSD</abbr> reference number. 
@@ -61,7 +61,7 @@
         <ul class="govuk-list opss-left-nav">
             <li class="opss-left-nav__active">
                 <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">
-                    Product <span class="govuk-!-font-weight-regular govuk-!-margin-left-1"><abbr>psd</abbr>-304</span>
+                    Product <span class="govuk-!-font-weight-regular">&nbsp;<abbr>psd</abbr>-304</span>
                 </a>
 
                 <ul class="govuk-list">
